<resources>
    <string name="app_name">DeCasa</string>
    <string name="action_settings">Settings</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="text_welcome">Welcome.\nChoose here the service you want.</string>
    <string name="text_electrician">Electrician</string>
    <string name="text_plumber">Plumber</string>
    <string name="text_fitter">Fitter</string>
    <string name="desc_electrician">Icon electrician</string>
    <string name="desc_plumber">Icon plumber</string>
    <string name="desc_fitter">Icon fitter</string>
    <string name="desc_professional">Photo professional</string>
    <string name="desc_favorite">Icon favorite</string>
    <string name="desc_evaluators">Icon evaluators</string>
    <string name="desc_phone_professional">Icon call</string>
    <string name="desc_decasa">Image decasa</string>
    <string name="desc_slogan">Image slogan</string>
    <string name="desc_decasa_icon">ícone app</string>
    <string name="desc_cam">Icon cam</string>
    <string name="desc_gallery">Icon gallery</string>
    <string name="desc_delete">Icon delete</string>
    <string name="text_evaluation_type">Service</string>
    <string name="text_number_evaluation">Evaluation</string>
    <string name="text_number_assessments">Assessments</string>
    <string name="text_see_evaluations">See evaluations</string>
    <string name="text_services">Services</string>
    <string name="text_address_professional">Address</string>
    <string name="text_phone_professional">Telephone</string>
    <string name="text_website">Website</string>
    <string name="text_social_network">Social network</string>
    <string name="text_evaluations">Evaluations</string>
    <string name="text_designer">Designer</string>
    <string name="text_designer_name">Kaio Cordeiro</string>
    <string name="text_developers">Developers</string>
    <string name="text_developers_name">Andreza Raquel\nErick Alcântara\nLucas Marlon\nMarcos Antônio\nMaria Daniela\nRayssa Naianny</string>
    <string name="text_first_evaluate">No evaluation.\nBe the first to evaluation.</string>
    <string name="text_call">Call</string>
    <string name="text_version">Version 1.0</string>
    <string name="hint_item">Item</string>
    <string name="desc_item">Icon item</string>
    <string name="hint_social_network">www.facebook.com/joaoencanador</string>
    <string name="hint_website">www.meusite.com.br</string>
    <string name="hint_phone_professional">(83) 98765-4321</string>
    <string name="hint_address_professional">Avenida Floriano Peixoto, 100, Centro, Campina Grande
        - Paraíba</string>
    <string name="hint_services">Electrician, Plumber e Fitter</string>
    <string name="hint_professional_name">Professional name</string>
    <string name="title_activity_professionals">Professionals</string>
    <string name="title_activity_assessments">Assessments</string>
    <string name="text_location_nearest">Find nearest</string>
    <string name="btn_more_information">More information</string>
    <string name="title_electricians">Electricians</string>
    <string name="title_plumbers">Plumbers</string>
    <string name="title_fitters">Fitters</string>
    <string name="google_maps_key">AIzaSyDy5WZ0HEaaxLss_A_UGuM6FI_k1IjIlcM</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_my_location">My location</string>
    <string name="message_dialog_gps">Do you want to turn on your GPS?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_activity_cadastre_or_login">CadastreOrLoginActivity</string>
    <string name="title_activity_user_cadastre">UserCadastreActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hint_name">Name</string>
    <string name="hint_date_of_birth">Date of birth</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_neighborhood">Neighborhood</string>
    <string name="hint_street">Street</string>
    <string name="hint_number">Number</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm password</string>
    <string name="hint_current_password">Current password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_confirm_new_password">Confirm new password</string>
    <string name="hint_address">Address</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="btn_login_user">Sign in</string>
    <string name="hint_user_email">Email</string>
    <string name="hint_user_password">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_short_name">Very short name</string>
    <string name="err_msg_birth">Enter your date of bith</string>
    <string name="err_invalid_birth">Invalid date</string>
    <string name="err_msg_neighborhood">Enter your neighborhood</string>
    <string name="err_short_neighborhood_name">Very short neighborhood name</string>
    <string name="err_msg_street">Enter your street</string>
    <string name="err_short_street_name">Very short street name</string>
    <string name="err_msg_number">Enter the number</string>
    <string name="err_msg_city">Enter you city</string>
    <string name="err_short_city_name">Very short city name</string>
    <string name="err_msg_username">Enter you username</string>
    <string name="err_short_username">Very short username</string>
    <string name="err_msg_password">Enter your password</string>
    <string name="err_short_password">The password must contain at least 6 characters</string>
    <string name="err_msg_password_confirm">Enter your password again</string>
    <string name="title_dialog_find_nearest">Choose an option:</string>
    <string name="option_dialog_GPS">Find by GPS</string>
    <string name="option_dialog_address">Find by an address</string>
    <string name="title_dialog_address_form">Enter the address:</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="welcome">Welcome</string>
    <string name="btn_to_evaluate">To evaluate</string>
    <string name="btn_view_profile">View profile</string>
    <string name="btn_enter">Sign in</string>
    <string name="err_passwords_do_not_match">Passwords do not match!</string>
    <string name="err_incorrect_current_password">Incorrect current password!</string>
    <string name="err_current_password_is_not_entered">Enter your current password</string>
    <string name="err_invalid_day">Invalid day</string>
    <string name="err_invalid_month">Invalid month</string>
    <string name="err_invalid_year">Invalid year</string>
    <string name="title_activity_evaluation_professional">Evaluate profile</string>
    <string name="tv_attendance">Attendance</string>
    <string name="hint_comment">Your comment</string>
    <string name="btn_evaluate">Evaluate</string>
    <string name="text_successfully_completed_evaluation">Successfully completed evaluation</string>
    <string name="err_unavailable_connection">Unavailable connection!</string>
    <string name="btn_send">Send</string>
    <string name="no_assessments">No assessments</string>
    <string name="text_my_favorites">My favorites</string>
    <string name="text_instructions_for_use">Instructions for use</string>
    <string name="text_about">About</string>
    <string name="text_logout">Logout</string>
    <string name="title_activity_about">About</string>
    <string name="begin_welcome_female">Welcome</string>
    <string name="begin_welcome_male">Welcome</string>
    <string name="end_welcome">\nChoose here the service you want.</string>
    <string name="title_activity_edit_user_profile">Editing profile</string>
    <string name="title_activity_favorite">My favorites</string>
    <string name="btn_edit">Edit</string>
    <string name="crop_your_picture">Crop your picture</string>
    <string name="add_favorite">Added to Favorites</string>
    <string name="remove_favorite">Removed from Favorites</string>
    <string name="title_activity_user_profile">My profile</string>
    <string name="text_my_location">My location</string>
    <string name="edit_evaluation">Edit evaluation</string>
    <string name="tv_service">Service</string>
    <string name="tv_description">Description</string>
    <string name="number_assessments">0</string>
    <string name="no_plumber_as_favorite">No plumber as favorite</string>
    <string name="no_fitter_as_favorite">No fitter as favorite</string>
    <string name="no_electrician_as_favorite">No electrician as favorite</string>
    <string name="username_already_exists">Username already exists!</string>
    <string name="msg_success_register">Successful registration!</string>
    <string name="msg_err_register">User not registered</string>
</resources>