<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.ProfessionalProfileGoldPlanActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llPlayersName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_head"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="0dp"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <com.pkmmte.view.CircularImageView
                        android:id="@+id/iv_professional"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/photo_default"
                        android:contentDescription="@string/desc_professional"
                        app:border="false"
                        app:border_color="#EEEEEE"
                        app:border_width="4dp"
                        app:shadow="true" />

                    <TextView
                        android:id="@+id/tv_professional_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iv_professional"
                        android:hint="@string/hint_professional_name"
                        android:textSize="24sp"
                        android:maxLength="100" />

                    <ImageButton
                        android:id="@+id/ib_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="24dp"
                        android:layout_alignBottom="@+id/iv_professional"
                        android:layout_alignEnd="@+id/tv_professional_name"
                        android:background="@color/white"
                        android:contentDescription="@string/desc_favorite" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_evaluation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                card_view:cardElevation="0dp"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin">

                    <LinearLayout
                        android:id="@+id/layout_ratingbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RatingBar
                            android:id="@+id/rb_evaluation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/StarRatingBar"
                            android:isIndicator="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_evaluation_type"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:layout_gravity="center_horizontal" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_toEndOf="@+id/layout_ratingbar"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <ImageButton
                                android:id="@+id/ib_evaluation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/ic_person_black_24dp"
                                android:background="@color/white"
                                android:contentDescription="@string/desc_evaluators"/>

                            <TextView
                                android:id="@+id/tv_number_assessments"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/number_assessments"
                                android:textSize="16sp"
                                android:layout_toEndOf="@+id/ib_evaluation"/>

                        </RelativeLayout>

                        <Button
                            android:id="@+id/btn_evaluations"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_to_evaluate"
                            android:textAllCaps="false"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp"
                            android:gravity="center_horizontal"/>

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_data"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                card_view:cardElevation="0dp"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/text_services"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_services"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/hint_services"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/text_address_professional"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_address_professional"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/hint_address_professional"
                            android:layout_marginTop="10dp"
                            android:textSize="16sp"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@+id/ib_map_professional"/>

                        <ImageButton
                            android:id="@+id/ib_map_professional"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:src="@mipmap/user_location_icon"
                            android:background="@color/white"
                            android:contentDescription="@string/desc_phone_professional"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:text="@string/text_phone_professional"
                        android:textSize="16sp"/>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_phone_professional"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="20dp"
                            android:gravity="center"
                            android:text="@string/hint_phone_professional"/>

                        <ImageButton
                            android:id="@+id/ib_phone_professional"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="12dp"
                            android:src="@mipmap/ic_call"
                            android:background="@color/white"
                            android:contentDescription="@string/desc_phone_professional"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="30dp"
                        android:layout_marginTop="20dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/text_social_network"/>

                    <TextView
                        android:id="@+id/tv_social_network"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="30dp"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:hint="@string/hint_social_network" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/text_website"/>

                    <TextView
                        android:id="@+id/tv_website"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:hint="@string/hint_website" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/loadingProfileProfessional"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#64000000"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="?android:attr/progressBarStyleLarge"/>

    </RelativeLayout>

</LinearLayout>
