<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="100"
                android:hint="@string/hint_address" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:layout_below="@+id/input_layout_address"
            android:layout_alignParentEnd="true">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:minWidth="64dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/darkGrey"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:minWidth="64dp"
                android:gravity="start|center_vertical"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/ok" />

        </LinearLayout>

</RelativeLayout>