<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:minWidth="300dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <com.pkmmte.view.CircularImageView
            android:id="@+id/iv_professional"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_weight="35"
            android:src="@drawable/default_avatar"
            app:border="false"
            app:border_color="#EEEEEE"
            app:border_width="4dp"
            app:shadow="true" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="65">

            <TextView
                android:text="@string/text_services"
                android:id="@+id/tv_profession"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:gravity="start"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:text="@string/hint_professional_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:id="@+id/tv_name_professional"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:gravity="start"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btn_more_information"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_more_information"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <TextView
            android:text="@string/text_evaluation_type"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_evaluation"
            style="@style/StarRatingBar"
            android:stepSize="1"/>

    </LinearLayout>

</LinearLayout>